Bug 1994820 - Add error handling to getBackupFileInfo and error display for restore component when used in about:welcome r=omc-reviewers,kpatenio,mviar
Differential Revision: https://phabricator.services.mozilla.com/D269270

UltraBlame original commit: 03377d1990dbd83570191ce4ab40db3a074ad8b9

--- a/browser/components/backup/content/restore-from-backup.css
+++ b/browser/components/backup/content/restore-from-backup.css
@@ -920,6 +920,21 @@ size
 small
 )
 ;
+margin
+-
+block
+-
+start
+:
+var
+(
+-
+-
+space
+-
+xsmall
+)
+;
 }
 }
 /
@@ -1063,6 +1078,18 @@ auto
 ;
 }
 }
+}
+.
+field
+-
+error
+{
+text
+-
+align
+:
+start
+;
 }
 media
 (
