--- a/browser/components/backup/tests/chrome/test_restore_from_backup.html
+++ b/browser/components/backup/tests/chrome/test_restore_from_backup.html
@@ -1761,6 +1761,1728 @@ remove
 }
 )
 ;
+/
+*
+*
+*
+Helper
+function
+to
+test
+that
+a
+support
+link
+has
+correct
+attributes
+*
+and
+UTM
+params
+when
+used
+with
+aboutWelcomeEmbedded
+*
+*
+param
+{
+Element
+}
+link
+-
+The
+support
+link
+element
+to
+test
+*
+param
+{
+string
+}
+linkName
+-
+The
+name
+of
+the
+link
+to
+test
+*
+/
+function
+assertEmbeddedSupportLink
+(
+link
+linkName
+)
+{
+ok
+(
+link
+{
+linkName
+}
+should
+be
+present
+)
+;
+ok
+(
+!
+link
+.
+hasAttribute
+(
+"
+is
+"
+)
+{
+linkName
+}
+should
+not
+have
+'
+is
+'
+attribute
+)
+;
+ok
+(
+!
+link
+.
+hasAttribute
+(
+"
+support
+-
+page
+"
+)
+{
+linkName
+}
+should
+not
+have
+support
+-
+page
+attribute
+)
+;
+ok
+(
+link
+.
+hasAttribute
+(
+"
+href
+"
+)
+{
+linkName
+}
+should
+have
+href
+attribute
+)
+;
+let
+url
+=
+new
+URL
+(
+link
+.
+getAttribute
+(
+"
+href
+"
+)
+)
+;
+is
+(
+url
+.
+searchParams
+.
+get
+(
+"
+utm_medium
+"
+)
+"
+firefox
+-
+desktop
+"
+{
+linkName
+}
+should
+have
+correct
+utm_medium
+)
+;
+is
+(
+url
+.
+searchParams
+.
+get
+(
+"
+utm_source
+"
+)
+"
+npo
+"
+{
+linkName
+}
+should
+have
+correct
+utm_source
+)
+;
+is
+(
+url
+.
+searchParams
+.
+get
+(
+"
+utm_campaign
+"
+)
+"
+fx
+-
+backup
+-
+restore
+"
+{
+linkName
+}
+should
+have
+correct
+utm_campaign
+)
+;
+is
+(
+url
+.
+searchParams
+.
+get
+(
+"
+utm_content
+"
+)
+"
+restore
+-
+error
+"
+{
+linkName
+}
+should
+have
+correct
+utm_content
+)
+;
+is
+(
+link
+.
+getAttribute
+(
+"
+target
+"
+)
+"
+_blank
+"
+{
+linkName
+}
+should
+have
+target
+=
+'
+_blank
+'
+)
+;
+}
+/
+*
+*
+*
+Tests
+that
+support
+links
+have
+UTM
+parameters
+when
+aboutWelcomeEmbedded
+is
+true
+*
+/
+add_task
+(
+async
+function
+test_support_links_with_utm_params
+(
+)
+{
+let
+content
+=
+document
+.
+getElementById
+(
+"
+content
+"
+)
+;
+let
+restoreFromBackup
+=
+document
+.
+createElement
+(
+"
+restore
+-
+from
+-
+backup
+"
+)
+;
+content
+.
+appendChild
+(
+restoreFromBackup
+)
+;
+/
+/
+Set
+up
+the
+support
+base
+link
+for
+testing
+otherwise
+links
+will
+be
+broken
+restoreFromBackup
+.
+backupServiceState
+=
+{
+.
+.
+.
+restoreFromBackup
+.
+backupServiceState
+supportBaseLink
+:
+"
+https
+:
+/
+/
+support
+.
+mozilla
+.
+org
+/
+"
+}
+;
+restoreFromBackup
+.
+aboutWelcomeEmbedded
+=
+true
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+/
+/
+Test
+the
+"
+no
+backup
+file
+"
+link
+let
+noBackupFileLink
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+restore
+-
+from
+-
+backup
+-
+no
+-
+backup
+-
+file
+-
+link
+"
+)
+;
+assertEmbeddedSupportLink
+(
+noBackupFileLink
+"
+No
+backup
+file
+link
+"
+)
+;
+/
+/
+Test
+the
+incorrect
+password
+support
+link
+restoreFromBackup
+.
+backupServiceState
+=
+{
+.
+.
+.
+restoreFromBackup
+.
+backupServiceState
+backupFileInfo
+:
+{
+date
+:
+new
+Date
+(
+)
+isEncrypted
+:
+true
+}
+recoveryErrorCode
+:
+ERRORS
+.
+UNAUTHORIZED
+}
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+let
+passwordErrorLink
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+backup
+-
+incorrect
+-
+password
+-
+support
+-
+link
+"
+)
+;
+assertEmbeddedSupportLink
+(
+passwordErrorLink
+"
+Password
+error
+link
+"
+)
+;
+restoreFromBackup
+.
+remove
+(
+)
+;
+}
+)
+;
+/
+*
+*
+*
+Tests
+that
+the
+correct
+status
+is
+displayed
+under
+the
+input
+*
+for
+different
+backup
+file
+info
+states
+.
+*
+/
+add_task
+(
+async
+function
+test_backup_file_status_rendering
+(
+)
+{
+let
+content
+=
+document
+.
+getElementById
+(
+"
+content
+"
+)
+;
+let
+restoreFromBackup
+=
+document
+.
+createElement
+(
+"
+restore
+-
+from
+-
+backup
+"
+)
+;
+content
+.
+appendChild
+(
+restoreFromBackup
+)
+;
+/
+/
+Test
+that
+when
+no
+backup
+file
+is
+selected
+the
+support
+link
+is
+displayed
+restoreFromBackup
+.
+backupServiceState
+=
+{
+.
+.
+.
+restoreFromBackup
+.
+backupServiceState
+backupFileInfo
+:
+null
+recoveryErrorCode
+:
+ERRORS
+.
+NONE
+}
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+let
+noBackupLink
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+restore
+-
+from
+-
+backup
+-
+no
+-
+backup
+-
+file
+-
+link
+"
+)
+;
+ok
+(
+noBackupLink
+"
+Should
+show
+support
+link
+when
+no
+backup
+file
+is
+selected
+"
+)
+;
+let
+backupInfo
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+restore
+-
+from
+-
+backup
+-
+backup
+-
+found
+-
+info
+"
+)
+;
+ok
+(
+!
+backupInfo
+"
+Should
+not
+show
+backup
+info
+when
+no
+backup
+file
+is
+selected
+"
+)
+;
+/
+/
+Test
+that
+when
+a
+backup
+file
+is
+selected
+the
+backup
+info
+is
+displayed
+const
+IS_ENCRYPTED
+=
+true
+;
+const
+DATE
+=
+new
+Date
+(
+"
+2024
+-
+01
+-
+01T00
+:
+00
+:
+00
+.
+000Z
+"
+)
+;
+const
+DEVICE_NAME
+=
+"
+test
+-
+device
+"
+;
+restoreFromBackup
+.
+backupServiceState
+=
+{
+.
+.
+.
+restoreFromBackup
+.
+backupServiceState
+backupFileInfo
+:
+{
+isEncrypted
+:
+IS_ENCRYPTED
+date
+:
+DATE
+deviceName
+:
+DEVICE_NAME
+}
+recoveryErrorCode
+:
+ERRORS
+.
+NONE
+}
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+noBackupLink
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+restore
+-
+from
+-
+backup
+-
+no
+-
+backup
+-
+file
+-
+link
+"
+)
+;
+ok
+(
+!
+noBackupLink
+"
+Should
+not
+show
+support
+link
+when
+backup
+file
+is
+found
+"
+)
+;
+backupInfo
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+restore
+-
+from
+-
+backup
+-
+backup
+-
+found
+-
+info
+"
+)
+;
+ok
+(
+backupInfo
+"
+Should
+show
+backup
+info
+when
+backup
+file
+is
+found
+"
+)
+;
+is
+(
+backupInfo
+.
+getAttribute
+(
+"
+data
+-
+l10n
+-
+id
+"
+)
+"
+backup
+-
+file
+-
+creation
+-
+date
+-
+and
+-
+device
+"
+"
+Should
+have
+correct
+l10n
+id
+for
+backup
+info
+"
+)
+;
+/
+/
+Test
+that
+when
+embedded
+in
+about
+:
+welcome
+if
+an
+error
+occurs
+/
+/
+the
+generic
+file
+error
+template
+is
+displayed
+restoreFromBackup
+.
+aboutWelcomeEmbedded
+=
+true
+;
+restoreFromBackup
+.
+backupServiceState
+=
+{
+.
+.
+.
+restoreFromBackup
+.
+backupServiceState
+backupFileInfo
+:
+null
+recoveryErrorCode
+:
+ERRORS
+.
+CORRUPTED_ARCHIVE
+}
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+let
+errorTemplate
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+backup
+-
+generic
+-
+file
+-
+error
+"
+)
+;
+ok
+(
+errorTemplate
+"
+Should
+show
+error
+template
+in
+embedded
+context
+with
+error
+"
+)
+;
+/
+/
+Test
+that
+when
+not
+embedded
+in
+about
+:
+welcome
+if
+an
+error
+occurs
+/
+/
+the
+support
+link
+is
+displayed
+instead
+of
+the
+generic
+file
+error
+template
+restoreFromBackup
+.
+aboutWelcomeEmbedded
+=
+false
+;
+restoreFromBackup
+.
+backupServiceState
+=
+{
+.
+.
+.
+restoreFromBackup
+.
+backupServiceState
+backupFileInfo
+:
+null
+recoveryErrorCode
+:
+ERRORS
+.
+FILE_SYSTEM_ERROR
+}
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+errorTemplate
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+backup
+-
+generic
+-
+file
+-
+error
+"
+)
+;
+ok
+(
+!
+errorTemplate
+"
+Should
+not
+show
+generic
+file
+error
+template
+when
+not
+embedded
+in
+about
+:
+welcome
+"
+)
+;
+noBackupLink
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+restore
+-
+from
+-
+backup
+-
+no
+-
+backup
+-
+file
+-
+link
+"
+)
+;
+ok
+(
+noBackupLink
+"
+Should
+show
+support
+link
+when
+not
+embedded
+in
+about
+:
+welcome
+with
+error
+"
+)
+;
+restoreFromBackup
+.
+remove
+(
+)
+;
+}
+)
+;
+/
+*
+*
+*
+Tests
+that
+when
+embedded
+in
+about
+:
+welcome
+the
+textarea
+'
+s
+aria
+-
+describedby
+*
+attribute
+correctly
+references
+the
+appropriate
+element
+based
+on
+the
+displayed
+status
+.
+*
+/
+add_task
+(
+async
+function
+test_textarea_aria_describedby_accessibility
+(
+)
+{
+let
+content
+=
+document
+.
+getElementById
+(
+"
+content
+"
+)
+;
+let
+restoreFromBackup
+=
+document
+.
+createElement
+(
+"
+restore
+-
+from
+-
+backup
+"
+)
+;
+content
+.
+appendChild
+(
+restoreFromBackup
+)
+;
+restoreFromBackup
+.
+aboutWelcomeEmbedded
+=
+true
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+let
+textarea
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+backup
+-
+filepicker
+-
+input
+"
+)
+;
+ok
+(
+textarea
+"
+Textarea
+should
+be
+present
+when
+aboutWelcomeEmbedded
+is
+true
+"
+)
+;
+/
+/
+Test
+that
+when
+there
+is
+no
+backup
+file
+info
+we
+should
+reference
+no
+-
+backup
+-
+file
+-
+link
+restoreFromBackup
+.
+backupServiceState
+=
+{
+.
+.
+.
+restoreFromBackup
+.
+backupServiceState
+backupFileInfo
+:
+null
+recoveryErrorCode
+:
+ERRORS
+.
+NONE
+}
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+let
+ariaDescribedBy
+=
+textarea
+.
+getAttribute
+(
+"
+aria
+-
+describedby
+"
+)
+;
+is
+(
+ariaDescribedBy
+"
+restore
+-
+from
+-
+backup
+-
+no
+-
+backup
+-
+file
+-
+link
+"
+"
+aria
+-
+describedby
+should
+reference
+no
+-
+backup
+-
+file
+-
+link
+when
+no
+backup
+info
+"
+)
+;
+let
+referencedElement
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+restore
+-
+from
+-
+backup
+-
+no
+-
+backup
+-
+file
+-
+link
+"
+)
+;
+ok
+(
+referencedElement
+"
+Referenced
+element
+should
+exist
+"
+)
+;
+/
+/
+Test
+that
+when
+a
+backup
+file
+is
+found
+we
+should
+reference
+backup
+-
+found
+-
+info
+restoreFromBackup
+.
+backupServiceState
+=
+{
+.
+.
+.
+restoreFromBackup
+.
+backupServiceState
+backupFileInfo
+:
+{
+date
+:
+new
+Date
+(
+)
+deviceName
+:
+"
+test
+-
+device
+"
+isEncrypted
+:
+false
+}
+recoveryErrorCode
+:
+ERRORS
+.
+NONE
+}
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+ariaDescribedBy
+=
+textarea
+.
+getAttribute
+(
+"
+aria
+-
+describedby
+"
+)
+;
+is
+(
+ariaDescribedBy
+"
+restore
+-
+from
+-
+backup
+-
+backup
+-
+found
+-
+info
+"
+"
+aria
+-
+describedby
+should
+reference
+backup
+-
+found
+-
+info
+when
+backup
+file
+is
+found
+"
+)
+;
+referencedElement
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+restore
+-
+from
+-
+backup
+-
+backup
+-
+found
+-
+info
+"
+)
+;
+ok
+(
+referencedElement
+"
+Referenced
+element
+should
+exist
+"
+)
+;
+/
+/
+Test
+that
+when
+we
+'
+re
+in
+an
+error
+state
+we
+should
+reference
+the
+generic
+-
+file
+-
+error
+restoreFromBackup
+.
+backupServiceState
+=
+{
+.
+.
+.
+restoreFromBackup
+.
+backupServiceState
+backupFileInfo
+:
+null
+recoveryErrorCode
+:
+ERRORS
+.
+CORRUPTED_ARCHIVE
+}
+;
+await
+restoreFromBackup
+.
+updateComplete
+;
+ariaDescribedBy
+=
+textarea
+.
+getAttribute
+(
+"
+aria
+-
+describedby
+"
+)
+;
+is
+(
+ariaDescribedBy
+"
+backup
+-
+generic
+-
+file
+-
+error
+"
+"
+aria
+-
+describedby
+should
+reference
+generic
+-
+file
+-
+error
+when
+there
+'
+s
+a
+recovery
+error
+"
+)
+;
+referencedElement
+=
+restoreFromBackup
+.
+shadowRoot
+.
+querySelector
+(
+"
+#
+backup
+-
+generic
+-
+file
+-
+error
+"
+)
+;
+ok
+(
+referencedElement
+"
+Referenced
+element
+should
+exist
+"
+)
+;
+restoreFromBackup
+.
+remove
+(
+)
+;
+}
+)
+;
 <
 /
 script
