Bug 1995057 - Vertically center search bar when in fixed-search mode r=home-newtab-reviewers,ini
Differential Revision: https://phabricator.services.mozilla.com/D269658

UltraBlame original commit: ba6f45336224ec674ab9ec967fd4147acb77a476

--- a/browser/extensions/newtab/content-src/components/Search/_Search.scss
+++ b/browser/extensions/newtab/content-src/components/Search/_Search.scss
@@ -2468,6 +2468,10 @@ height
 )
 {
 .
+activity
+-
+stream
+.
 fixed
 -
 search
@@ -2599,6 +2603,16 @@ z
 index
 :
 3
+;
+display
+:
+flex
+;
+align
+-
+items
+:
+center
 ;
 .
 search
