--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -16258,6 +16258,10 @@ height
 )
 {
 .
+activity
+-
+stream
+.
 fixed
 -
 search
@@ -16347,7 +16351,21 @@ index
 :
 3
 ;
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
 }
+.
+activity
+-
+stream
 .
 fixed
 -
@@ -16370,6 +16388,10 @@ height
 52px
 ;
 }
+.
+activity
+-
+stream
 .
 fixed
 -
@@ -16396,6 +16418,10 @@ size
 ;
 }
 .
+activity
+-
+stream
+.
 fixed
 -
 search
@@ -16420,6 +16446,10 @@ right
 16px
 ;
 }
+.
+activity
+-
+stream
 .
 fixed
 -
@@ -16456,6 +16486,10 @@ large
 ;
 }
 .
+activity
+-
+stream
+.
 fixed
 -
 search
@@ -16475,6 +16509,10 @@ display
 none
 ;
 }
+.
+activity
+-
+stream
 .
 fixed
 -
@@ -16509,6 +16547,10 @@ size
 ;
 }
 .
+activity
+-
+stream
+.
 fixed
 -
 search
@@ -16541,6 +16583,10 @@ large
 )
 ;
 }
+.
+activity
+-
+stream
 .
 fixed
 -
