Bug 1991134 - Add standard opacity to New Tab card containers, along with blur and hover effects. r=home-newtab-reviewers,desktop-theme-reviewers,jules,maxx
Differential Revision: https://phabricator.services.mozilla.com/D266420

UltraBlame original commit: f0ce3df7da5ec28bd983a4a270275c1bc7edf88c

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/AdBanner/_AdBanner.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/AdBanner/_AdBanner.scss
@@ -392,22 +392,16 @@ banner
 -
 inner
 {
+include
+newtab
+-
+card
+-
+style
+;
 position
 :
 relative
-;
-background
-:
-var
-(
--
--
-newtab
--
-background
--
-card
-)
 ;
 box
 -
