--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
@@ -2578,18 +2578,12 @@ card
 grid
 &
 {
-background
-:
-var
-(
--
--
+include
 newtab
 -
-background
--
 card
-)
+-
+style
 ;
 &
 :
@@ -2667,6 +2661,41 @@ shadow
 -
 color
 )
+;
+z
+-
+index
+:
+1
+;
+}
+/
+/
+This
+is
+higher
+to
+keep
+the
+context
+menu
+(
+when
+open
+)
+above
+any
+other
+cards
+&
+.
+active
+{
+z
+-
+index
+:
+2
 ;
 }
 .
@@ -3448,18 +3477,12 @@ refined
 -
 cards
 {
-background
-:
-var
-(
--
--
+include
 newtab
 -
-background
--
 card
-)
+-
+style
 ;
 .
 img
