--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/PromoCard/_PromoCard.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/PromoCard/_PromoCard.scss
@@ -5,6 +5,13 @@ card
 -
 wrapper
 {
+include
+newtab
+-
+card
+-
+style
+;
 display
 :
 none
@@ -14,19 +21,6 @@ none
 hidden
 by
 default
-background
-:
-var
-(
--
--
-newtab
--
-background
--
-card
-)
-;
 box
 -
 shadow
