--- a/browser/extensions/newtab/content-src/components/Widgets/Lists/_Lists.scss
+++ b/browser/extensions/newtab/content-src/components/Widgets/Lists/_Lists.scss
@@ -59,6 +59,13 @@ MPL
 .
 lists
 {
+include
+newtab
+-
+card
+-
+style
+;
 grid
 -
 column
@@ -79,19 +86,6 @@ card
 width
 -
 medium
-)
-;
-background
-:
-var
-(
--
--
-newtab
--
-background
--
-card
 )
 ;
 border
