--- a/browser/extensions/newtab/content-src/styles/_mixins.scss
+++ b/browser/extensions/newtab/content-src/styles/_mixins.scss
@@ -450,3 +450,78 @@ color
 }
 }
 }
+/
+/
+Adds
+transparency
+and
+a
+hover
+effect
+to
+card
+background
+.
+mixin
+newtab
+-
+card
+-
+style
+{
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+card
+)
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+;
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
+&
+:
+hover
+{
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+color
+-
+secondary
+)
+;
+}
+}
+}
