--- a/browser/extensions/newtab/content-src/styles/_variables.scss
+++ b/browser/extensions/newtab/content-src/styles/_variables.scss
@@ -849,9 +849,9 @@ background
 -
 secondary
 with
-20
+15
 %
-opacity
+transparency
 newtab
 -
 background
@@ -872,7 +872,7 @@ color
 -
 white
 )
-80
+85
 %
 transparent
 )
@@ -885,12 +885,12 @@ card
 -
 dark
 :
-rgb
+rgba
 (
 66
 65
 77
-80
+85
 %
 )
 ;
