--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -241,7 +241,7 @@ color
 -
 white
 )
-80
+85
 %
 transparent
 )
@@ -468,15 +468,15 @@ rgba
 255
 255
 255
-70
+85
 %
 )
 rgba
 (
-35
-34
-43
-70
+66
+65
+77
+85
 %
 )
 )
@@ -1378,7 +1378,7 @@ rgba
 77
 0
 .
-8
+85
 )
 ;
 -
@@ -38757,6 +38757,27 @@ MPL
 .
 lists
 {
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+card
+)
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+;
 grid
 -
 column
@@ -38777,19 +38798,6 @@ card
 width
 -
 medium
-)
-;
-background
-:
-var
-(
--
--
-newtab
--
-background
--
-card
 )
 ;
 border
@@ -38864,6 +38872,41 @@ direction
 :
 column
 ;
+}
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
+.
+lists
+:
+hover
+{
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+color
+-
+secondary
+)
+;
+}
 }
 .
 lists
@@ -40658,6 +40701,27 @@ focus
 -
 timer
 {
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+card
+)
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+;
 grid
 -
 column
@@ -40678,19 +40742,6 @@ card
 width
 -
 medium
-)
-;
-background
-:
-var
-(
--
--
-newtab
--
-background
--
-card
 )
 ;
 border
@@ -40765,6 +40816,43 @@ shadow
 card
 )
 ;
+}
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
+.
+focus
+-
+timer
+:
+hover
+{
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+color
+-
+secondary
+)
+;
+}
 }
 .
 focus
@@ -77097,6 +77185,59 @@ background
 card
 )
 ;
+transition
+:
+opacity
+0
+.
+2s
+ease
+;
+}
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
+.
+ds
+-
+card
+-
+grid
+.
+sections
+-
+card
+-
+ui
+:
+hover
+{
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+color
+-
+secondary
+)
+;
+}
 }
 .
 ds
@@ -77238,6 +77379,40 @@ shadow
 -
 color
 )
+;
+z
+-
+index
+:
+1
+;
+}
+.
+ds
+-
+card
+-
+grid
+.
+sections
+-
+card
+-
+ui
+:
+not
+(
+.
+placeholder
+)
+.
+active
+{
+z
+-
+index
+:
+2
 ;
 }
 .
@@ -78731,6 +78906,101 @@ background
 card
 )
 ;
+transition
+:
+opacity
+0
+.
+2s
+ease
+;
+}
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
+.
+ds
+-
+card
+-
+grid
+.
+ds
+-
+card
+.
+ds
+-
+spoc
+-
+rectangle
+.
+ds
+-
+spoc
+-
+rectangle
+.
+refined
+-
+cards
+:
+hover
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+.
+ds
+-
+spoc
+-
+rectangle
+.
+ds
+-
+spoc
+-
+rectangle
+.
+refined
+-
+cards
+:
+hover
+{
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+color
+-
+secondary
+)
+;
+}
 }
 .
 ds
@@ -90627,10 +90897,6 @@ banner
 -
 inner
 {
-position
-:
-relative
-;
 background
 :
 var
@@ -90643,6 +90909,18 @@ background
 -
 card
 )
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+;
+position
+:
+relative
 ;
 box
 -
@@ -90674,6 +90952,51 @@ radius
 large
 )
 ;
+}
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
+.
+ad
+-
+banner
+-
+wrapper
+.
+ad
+-
+banner
+-
+inner
+:
+hover
+{
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+color
+-
+secondary
+)
+;
+}
 }
 .
 ad
@@ -91779,10 +92102,6 @@ card
 -
 wrapper
 {
-display
-:
-none
-;
 background
 :
 var
@@ -91795,6 +92114,18 @@ background
 -
 card
 )
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+;
+display
+:
+none
 ;
 box
 -
@@ -91849,6 +92180,45 @@ space
 large
 )
 ;
+}
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
+.
+promo
+-
+card
+-
+wrapper
+:
+hover
+{
+background
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+color
+-
+secondary
+)
+;
+}
 }
 .
 promo
