--- a/browser/extensions/newtab/content-src/components/Widgets/FocusTimer/_FocusTimer.scss
+++ b/browser/extensions/newtab/content-src/components/Widgets/FocusTimer/_FocusTimer.scss
@@ -61,6 +61,13 @@ focus
 -
 timer
 {
+include
+newtab
+-
+card
+-
+style
+;
 grid
 -
 column
@@ -81,19 +88,6 @@ card
 width
 -
 medium
-)
-;
-background
-:
-var
-(
--
--
-newtab
--
-background
--
-card
 )
 ;
 border
