Bug 1992171 - (part 2) Update error and warning banners in backup settings. r=fluent-reviewers,kpatenio,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D268597

UltraBlame original commit: a6d8111398611ea1cf6f4718a7616cd9ae3c89f3

--- a/browser/components/backup/tests/chrome/test_trigger_create_backup.html
+++ b/browser/components/backup/tests/chrome/test_trigger_create_backup.html
@@ -255,13 +255,6 @@ settings
 "
 )
 ;
-let
-triggerBackupButton
-=
-settings
-.
-triggerBackupButtonEl
-;
 settings
 .
 backupServiceState
@@ -309,46 +302,19 @@ settings
 .
 updateComplete
 ;
-is
-(
-triggerBackupButton
-.
-getAttribute
-(
-"
-data
--
-l10n
--
-id
-"
-)
-"
-settings
--
-data
--
-backup
--
-in
--
-progress
--
-button
-"
-)
-;
 ok
 (
-triggerBackupButton
+!
+settings
 .
-disabled
+triggerBackupButtonEl
 "
 Trigger
 backup
 button
 is
-disabled
+not
+visible
 when
 backup
 is
@@ -405,7 +371,9 @@ updateComplete
 ;
 ok
 (
-triggerBackupButton
+settings
+.
+triggerBackupButtonEl
 .
 disabled
 "
@@ -471,9 +439,11 @@ updateComplete
 ok
 (
 !
-triggerBackupButton
+settings
 .
-disabled
+triggerBackupButtonEl
+.
+enabled
 "
 Trigger
 backup
